# calc-port

./: .travis.yml  CMakeLists.txt  README.md
libcalc/: CMakeLists.txt  global.h  internals.cpp  internals.h
libcalc/func/: ops.cpp  ops.h  real.cpp  real.h
libcalc/modes/: cmplx.cpp  cmplx.h  comp.cpp  comp.h
libcalc/objects/: CalcErrors.h  ComplexScalar.cpp  ComplexScalar.h  Scalar.cpp  Scalar.h
libcalc/setup/: AngleSetup.cpp  AngleSetup.h  PrecisionSetup.cpp  PrecisionSetup.h  PrecisionType.h
prog/: CMakeLists.txt  quadratic.cpp
